--- a/views/mrp_production_views.xml
+++ b/views/mrp_production_views.xml
@@ -10,6 +10,11 @@
                         attrs="{'invisible': ['|',('product_packaging_id','=',False),('state', 'in', ('draft', 'done', 'cancel'))]}"
                         groups="stock.group_tracking_lot" data-hotkey="shift+g"/>
             </xpath>
+            <!--<xpath expr="//div[@name='button_box']" position="inside">
+                <button name="action_see_packages" string="Packages" type="object"
+                            class="oe_stat_button" icon="fa-cubes"
+                            attrs="{'invisible': [('has_packages', '=', False)]}"/>
+            </xpath>-->
         </field>
     </record>
 </odoo>
